# AREval

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_CN.md  demo.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
areval-api/areval_api/: alerting.py  main.py
areval-cli/areval_cli/: main.py
areval-dashboard/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
areval-dashboard/src/components/: Layout.tsx
areval-dashboard/src/lib/: apiClient.ts
areval-dashboard/src/pages/: curation.tsx  datasets.tsx  evaluations.tsx  index.tsx  online.tsx  regression.tsx  settings.tsx
areval-dashboard/src/styles/: globals.css
areval-engine/areval/: __init__.py  config.py  evaluator.py  routing.py  test_case.py
areval-engine/areval/datasets/: __init__.py  curator.py  formats.py  manager.py
areval-engine/areval/judges/: __init__.py  agent_judge.py  base.py  dag_judge.py  llm_judge.py
areval-engine/areval/metrics/: __init__.py  accuracy.py  agent.py  base.py  rag.py  safety.py  semantic.py
areval-engine/areval/online/: __init__.py  evaluator.py  monitors.py  storage.py
areval-engine/areval/providers/: __init__.py  base.py  local_llm.py  remote_llm.py
areval-engine/areval/regression/: __init__.py  baseline.py  detector.py
areval-engine/areval/storage/: __init__.py  base.py  json_store.py  sqlite_store.py
areval-engine/areval/tracing/: __init__.py  analyzers.py  exporters.py  tracer.py
areval-engine/areval/utils/: __init__.py  serialization.py
areval-sdk/areval_sdk/: __init__.py  decorators.py  reporters.py
datasets/: dataset_bootstrap.py  fix_jsonl.py  validate_datasets.py
datasets/seed/: customer_service.jsonl  rag_evaluation.jsonl  safety_redteam.jsonl
docs/: optimization_review.md
examples/: agent_with_tools.py  basic_evaluation.py  eval_config.yaml  online_monitoring.py  red_team_evaluation.py
tests/: test_agent_upgrade.py  test_baseline.py  test_curator.py  test_datasets.py  test_evaluator.py  test_judges.py  test_metrics.py  test_online.py  test_providers.py  test_rag_upgrade.py  test_regression.py  test_safety.py  test_safety_upgrade.py  test_serialization.py  test_tracing.py
tests/integration/: conftest.py  test_api.py
