[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "areval"
version = "0.1.0"
description = "AREval - Agent Regression Evaluation Harness"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.0",
    "openai>=2.41.1",
    "requests>=2.34.2",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.28"]
all = [
    "openai>=1.30",
    "anthropic>=0.28",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "scipy-stubs",
    "types-PyYAML",
]

[project.scripts]
areval = "areval_cli.main:app"

[project.urls]
Homepage = "https://github.com/yourname/areval"
Documentation = "https://areval.readthedocs.io"
Repository = "https://github.com/yourname/areval"

[tool.hatch.build.targets.wheel]
packages = ["areval-engine/areval", "areval-api/areval_api", "areval-sdk/areval_sdk", "areval-cli/areval_cli"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
# Target 3.12 to avoid syntax errors from numpy/scipy stubs that
# use the Python 3.12+ "type" statement.
python_version = "3.12"
# strict disabled: there are pre-existing type errors that would break CI.
# Re-enable once the project is fully typed.
# strict = true

[tool.pytest.ini_options]
markers = [
    "integration: integration tests (require API server or services)",
    "docker: tests that need a running Docker daemon",
    "e2e: end-to-end browser tests (Playwright)",
]

[tool.basedpyright]
include = ["areval-engine", "areval-sdk", "areval-api", "areval-cli", "examples", "tests"]
exclude = [".venv", "areval-dashboard/node_modules", "areval-dashboard/.next"]
typeCheckingMode = "standard"
pythonVersion = "3.10"
# The project intentionally uses typing aliases (Dict, List, Optional, Callable)
# for consistency with the project spec; disable deprecation noise.
reportDeprecated = "none"
# No stub files are provided for internal packages or some third-party deps;
# inline types are sufficient.
reportMissingTypeStubs = "none"
# Class attributes like `name = "exact_match"` are intentionally unannotated.
reportUnannotatedClassAttribute = "none"
